--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html,body{
 	width: 100%;
 	font-size: 100%;
 	line-height: 1;
-	font-size: 14px;
+	font-size: 16px;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
@@ -38,17 +38,34 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*--------------------*/
 
-.container{
-    max-width: 962px;
-    margin-bottom: 20px;
+body{
+	font-family: roboto, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	line-height: 24px;
+
+	color: #1D1D1D;
+}
+h1{
+	font-size: 22px;
+	font-weight: 500;
+	line-height: 34px;
+
+	margin-bottom: 8px;
 }
 header{
     width: 100%;
     height: 72px;
-    box-shadow: 0 2px;
+    box-shadow: 0 1px 15px rgba(122, 122, 122, 20%);
+    margin-bottom: 32px;
+	
 }
-#test{
-    height: 100%;
+#head{
+	height: 100%;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 .auth{
     width: 78px;
@@ -56,5 +73,63 @@ header{
     border: 1px solid #E0E0E0;
     background-color: #FFF;
     border-radius: 3px;
-    
+
+	font-size: 13px;
+	font-weight: 600;
+	
+}
+#basket{
+	margin: 8px 27px;
+}
+.search{
+	width: 100%;
+	height: 48px;
+	border-bottom: 1px solid #E0E0E0;
+	margin-bottom: 55px;
+	padding-top: 20px;
+	padding-left: 1px;
+
+	font-size: 16px;
+	
+}
+.search::placeholder{
+	color: #626262;
+	font-size: 16px;
+
+	/* opacity - непрозрачность. Нужна для анимации исчезания placeholder'a. */
+	opacity: 1;
+	transition: opacity 0.3s ease;
+}
+.search:focus::placeholder{
+	/* При щелчке на input.search placeholder исчезнет */
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+
+
+/* Стили карточек */
+.card{
+	background-color: #FFF;
+	margin: 8px 0;
+}
+.card:hover{
+	background-color: rgb(117,117,117, 10%);
+}
+.card > img{
+	width: 100%;
+}
+.cafe_name{
+	margin-top: 16px;
+	line-height: 24px;
+}
+.price_kitchen{
+	color: #626262;
+	margin: 4px 0 4px 0;
+	font-size: 14px;
+	line-height: 21px;
+}
+.minuts{
+	padding-bottom: 20px;
+	font-size: 13px;
+	line-height: 21px;
 }
