Уперся в footer, съехавший на 8px

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header{
 	margin: 8px 0;
 }
 .card:hover{
-	background-color: rgb(117,117,117, 10%);
+	background-color: rgb(117,117,117, 20%);
 }
 .card > img{
 	width: 100%;
@@ -136,9 +136,27 @@ header{
 	font-size: 13px;
 	line-height: 21px;
 }
-
 footer{
 	width: 100%;
-	height: 200px;
+	height: 350px;
 	background-color: #262626;
+	color: #FFF;
+}
+#footer-logo{
+	margin-top: 56px;
+	margin-bottom: 40px;	
+}
+.separator{
+	width: 100%;
+	height: 1px;
+	background-color: #ffffff;
+}
+#first-separ{
+	margin-bottom: 32px;
+}
+.language{
+	max-width: 225px;
+	height: 40px;
+	background-color: #3B3B3B;
+	margin-left: 8px;
 }
