--- a/style.css
+++ b/style.css
@@ -138,13 +138,16 @@ header{
 }
 footer{
 	width: 100%;
-	height: 350px;
 	background-color: #262626;
 	color: #FFF;
+	padding-top: 56px;
+}
+footer a{
+	display: block;
+	margin-bottom: 23px;
 }
 #footer-logo{
-	margin-top: 56px;
-	margin-bottom: 40px;	
+	margin-bottom: 40px;
 }
 .separator{
 	width: 100%;
@@ -154,9 +157,43 @@ footer{
 #first-separ{
 	margin-bottom: 32px;
 }
+#second-separ{
+	margin-top: 25px;
+	margin-bottom: 40px;
+}
+#third-separ{
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
 .language{
 	max-width: 225px;
 	height: 40px;
 	background-color: #3B3B3B;
-	margin-left: 8px;
+}
+.green{
+	color: #49A144;
+}
+.socials{
+	margin-top: 33px;
+}
+.socials > a{
+	display: inline-block;
+	margin: 17px 0 0 0;
+}
+#facebook{
+	margin-right: 12px;
+}
+#twitter{
+	margin-right: 8px;
+}
+.download{
+	width: fit-content;
+	margin: 0 auto;
+}
+.download a{
+	display: inline-block;
+	margin-bottom: 0;
+}
+#app-store{
+	margin-right: 40px;
 }
